--- a/CybersportTournament/AuthorizationWindow.xaml
+++ b/CybersportTournament/AuthorizationWindow.xaml
@@ -9,7 +9,7 @@
     <Grid>
         <Label Name="LoginLab"  Content="Логин:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="388,329,0,0" Foreground="White" Height="60" Width="180" FontSize="36"/>
         <TextBox Name="Login" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="567,329,0,0" Height="60" Width="550" Background="White" FontSize="36"/>
-        <Label Content="Пароль" VerticalAlignment="Top" HorizontalAlignment="Left" Foreground="White" Margin="388,411,0,0" Height="60" Width="180" FontSize="36"/>
+        <Label Content="Пароль:" VerticalAlignment="Top" HorizontalAlignment="Left" Foreground="White" Margin="388,411,0,0" Height="60" Width="180" FontSize="36"/>
         <PasswordBox Name="Password" VerticalAlignment="Top" HorizontalAlignment="Left" Height="60" Width="550" Margin="567,411,0,0" FontSize="36"/>
         <Button Name="AuthorizeButton" Content="Войти" VerticalAlignment="Top" HorizontalAlignment="Left" Height="60" Width="360" Margin="350,746,0,0" Click="AuthorizationClick" FontSize="36"/>
         <Button Name="RegistrationButton" Content="Зарегистрироваться" VerticalAlignment="Top" HorizontalAlignment="Right" Height="60" Width="360" Margin="0,746,350,0" Click="RegistrationClick" FontSize="36"/>
