--- a/CybersportTournament/Styles/Style.xaml
+++ b/CybersportTournament/Styles/Style.xaml
@@ -66,7 +66,7 @@
             <!--<EventTrigger RoutedEvent="Button.MouseEnter">
                 <EventTrigger.Actions>
                     <BeginStoryboard>
-                        <Storyboard Duration="0:0:1" SpeedRatio="3" FillBehavior="HoldEnd">
+                        <Storyboard Duration="0:0:1" SpeedRatio="3" FillBehavior="Stop">
                             <ColorAnimation Storyboard.TargetProperty="(Button.Background).(GradientStops[1].Color)" To="#FF409E8E"/>
                         </Storyboard>
                     </BeginStoryboard>
