--- a/CybersportTournament/App.xaml
+++ b/CybersportTournament/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:CybersportTournament"
-             StartupUri="AuthorizationWindow.xaml">
+             StartupUri="GameWindow.xaml">
 
     <Application.Resources>
         <ResourceDictionary Source="Styles/Style.xaml"/>
